[package]
name = "mutsumi"
version = "0.1.0"
edition = "2024"

[dependencies]
flume = "0.12.0"
libc = "0.2"
libloading = "0.9"
libmpv2 = "4.1.0"
once_cell = "1.21"
gtk = { version = "0.11", package = "gtk4", features = ["v4_22"] }
adw = { version = "0.9", package = "libadwaita", features = ["v1_9"] }
tracing = "0.1.44"
epoxy = "0.1.0"
atomic-wait = "1.1.0"
tokio = { version = "1", features = ["rt", "sync"] }
glib = "0.22"

tracing-subscriber = "0.3"
glow = "0.17"
thiserror = "2.0.18"
tsutils = { path = "../tsutils" }
libmpv2-sys = "=4.0.0"
gdk-wayland = { version = "0.11", package = "gdk4-wayland", features = [
  "v4_10",
  "wayland_crate",
] }
wl-proxy = { version = "0.1", features = [
  "protocol-linux_dmabuf_v1",
  "protocol-xdg_shell",
  "protocol-viewporter",
] }

[build-dependencies]
glib-build-tools = "0.22"

[[example]]
name = "mpv"
path = "example/mpv.rs"
