[workspace]
members = [
    "."
]

[package]
name = "tsukimi"
version = "26.7.3"
edition = "2024"
rust-version = "1.91"
description = "A simple Jellyfin Client written by GTK4-RS"
license = "GPL-3.0"

[dependencies]
gtk = { version = "0.11", package = "gtk4", features = ["v4_22"] }
adw = { version = "0.9", package = "libadwaita", features = ["v1_9"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "rustls-tls",
  "rustls-tls-native-roots",
  "json",
  "gzip",
] }
once_cell = "1.21.4"
bytefmt = "0.1.7"
uuid = { version = "1.23", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
gst = { version = "0.25", package = "gstreamer" }
url = "2.5.8"
gettext-rs = { version = "~0.7", features = ["gettext-system"] }
hostname = "0.4.2"
arc-swap = "1.9.1"
flume = "0.12.0"
derive_builder = "0.20.2"
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
regex = "1.12.3"
strsim = "0.11.1"
clap = { version = "4", features = ["derive"] }
fnv = "1.0.7"
rand = "0.10.1"
base64 = "0.22.1"
mutsumi = "0.1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
futures-util = "0.3.31"
itertools = "0.15.0"
moka = { version = "0.12.15", features = ["future"] }
glycin = { version = "3.1.0", default-features = false, features = ["gdk4", "tokio"] }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[features]
console = []                      # Enable console logging
default = ["protocols", "render"]
protocols = []                    # Enable custom protocol callbacks
render = []                       # Enable custom rendering
build_libmpv = []                 # build libmpv automatically, provided MPV_SOURCE is set

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.10"
xattr = { version = "1.6.1" }
gdk-x11 = { version = "0.11", package = "gdk4-x11", features = [
  "v4_18",
  "xlib",
] }
gdk-wayland = { version = "0.11", package = "gdk4-wayland", features = [
  "v4_18",
  "wayland_crate",
] }

[profile.release]
lto = true
strip = true
debug = "limited"
codegen-units = 1

[profile.dev]
debug = true
