[workspace]
members = ["libmpv-sys"]

[package]
name = "libmpv2"
version = "4.0.0"
edition = "2021"
authors = ["kohsine <kevoh1516@gmail.com>"]
license = "LGPL-2.1"
build = "build.rs"
readme = "README.md"
description = "Libmpv abstraction that's easy to use and can play next to all codecs and containers"
repository = "https://github.com/kohsine/libmpv-rs"
keywords = ["media", "playback", "mpv", "libmpv"]


[dependencies]
libmpv2-sys = { path = "libmpv-sys", version = "4.0.0" }

[dev-dependencies]
crossbeam = "0.7"
sdl2 = "0.36.0"

[features]
default = ["protocols", "render"]
protocols = [] # Enable custom protocol callbacks
render = [] # Enable custom rendering
build_libmpv = [] # build libmpv automatically, provided MPV_SOURCE is set
