[package]
name = "clapper-gtk"
edition.workspace = true
version.workspace = true


[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
bitflags = "2.5"
glib = "0.20"
gio = "0.20"
gtk = { package = "gtk4", version = "0.9" }
gdk = { package = "gdk4", version = "0.9" }
ffi = { package = "clapper-gtk-sys", path = "sys" }
clapper = { path = "../libclapper-rs" }