[package]
name = "clapper"
edition.workspace = true
version.workspace = true


[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
bitflags = "2.5"
glib = "0.19"
gio = "0.19"
gst = { package = "gstreamer", version = "0.22" }
ffi = { package = "clapper-sys", path = "sys" }


