deps = [
  clapper_dep,
  clapper_gtk_dep,
  gtk4_dep,
  libadwaita_dep
]

prefix = get_option('prefix')
bindir = prefix / get_option('bindir')

cargo_options = [ '--manifest-path', meson.project_source_root() / 'Cargo.toml' ]
cargo_options += [ '--target-dir', meson.project_build_root() / 'src' ]

rust_target = 'debug'

cargo_env = [ 'CARGO_HOME=' + meson.project_build_root() / 'cargo-home' ]

cargo_build = custom_target(
  'cargo-build',
  build_by_default: true,
  build_always_stale: true,
  output: 'example',
  console: true,
  install: true,
  install_dir: bindir,
  command: [
    'env',
    cargo_env,
    cargo, 'build',
    cargo_options,
    '&&',
    'cp', 'src' / rust_target / 'example', '@OUTPUT@',
  ]
)