[package]
name = "clapper-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.clapper_0_0]
name = "clapper-0.0"
version = "0"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "clapper_sys"

[dependencies]
libc = "0.2"
glib-sys = "0.20"
gobject-sys = "0.20"
gio-sys = "0.20"
gstreamer-sys = "0.23"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
